--- a/requirements.txt
+++ b/requirements.txt
@@ -2,7 +2,7 @@ fastapi==0.104.1
 uvicorn[standard]==0.24.0
 sqlalchemy==2.0.23
 databases==0.8.0
-psycopg2-binary==2.9.7
+asyncpg==0.29.0
 pydantic==2.5.0
 pydantic-settings==2.1.0
 python-jose[cryptography]==3.3.0
@@ -11,3 +11,5 @@ python-multipart==0.0.6
 python-dotenv==1.0.0
 supabase==2.0.0
 openai==1.3.0
+stripe==7.0.0
+paypalrestsdk==1.13.3
